@@ -209,7 +209,8 @@ $(document).ready(function() {
           }
     });
 	
-	SwitchLayout('Dashboard');
+	//SwitchLayout('Dashboard');
+	SwitchLayout('LightSwitches');
 } );
 
 </script>
